<resources>
    <string name="app_name">Iuvo</string>
    <string name="hello_world">Hello world!</string>
    <string name="a_picture">A picture.</string>
    <string name="course_count_dummy">0 Courses</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_none">None</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_manage_groups">Groups</string>
    <string name="menu_manage_semesters">Semesters</string>
    <string name="menu_add_course">Add Course</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="dialog_delete_confirm_title">Delete Confirm</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_name">Name</string>
    <string name="me_exludes_hidden_courses_subheader">Excludes Hidden Courses</string>
	<string name="me_gpa_header">My GPA</string>
    <string name="me_gpa">0.00</string>
    <string name="me_gpa_desc">Overall</string>
    <string name="me_gpa_with_exclusions_desc">with exclusions</string>
    <string name="me_progress_header">My Completion Progress</string>
    <string name="me_progress_percentage">0%</string>
    <string name="me_progress_percentage_desc">Complete</string>
    <string name="me_progress_fraction">0/0</string>
    <string name="me_progress_fraction_desc">Courses</string>
    <string name="me_progress_fraction_hours">0/0</string>
    <string name="me_progress_fraction_hours_desc">Hours</string>
    <string name="me_grade_dist_header">My Grade Distribution</string>
    <string name="me_grade_dist_key_a"><b>0.0% A</b></string>
    <string name="me_grade_dist_key_b"><b>0.0% B</b></string>
    <string name="me_grade_dist_key_c"><b>0.0% C</b></string>
    <string name="me_grade_dist_key_d"><b>0.0% D</b></string>
    <string name="me_grade_dist_key_f"><b>0.0% F</b></string>
    <string name="me_grade_dist_desc">Degree plan grade distribution</string>
    <string name="me_database_header">My Database</string>
    <string name="me_database_semester_count">0</string>
	<string name="me_database_group_count">0</string>
	<string name="me_database_course_count">0</string>
	<string name="me_database_semester_count_desc">Semester</string>
	<string name="me_database_group_count_desc">Group</string>
	<string name="me_database_course_count_desc">Course</string>
    <string name="plan_no_semester_assigned">No Semester Assigned</string>
    <string name="plan_no_courses_found">There\'s nothing in this group to manage.</string>
    <string name="plan_empty_group"><i>(empty)</i></string>
    <string name="plan_edit_group">Manage</string>
    <string name="more_export_success">Database successfully exported to sdcard/Iuvo.</string>
    <string name="more_export_fail">Export failed! Could not write to file.</string>
    <string name="more_import_success">Database successfully imported from sdcard/Iuvo.</string>
    <string name="more_import_not_found">No database found in sdcard/Iuvo</string>
    <string name="more_import_fail">Import failed!</string>
    <string name="dialog_title_backup_found">Backup Found</string>
    <string name="dialog_backup_found_export">A backup file was found. This backup file will be overwritten. This cannot be undone. Are you sure you want to continue?</string>
    <string name="dialog_backup_found_import">A backup file was found. Your current degree plan will be overwritten. This cannot be undone. Are you sure you want to continue?</string>
    <string name="dialog_button_import">Import</string>
    <string name="dialog_button_export">Export</string>
    <string name="title_activity_points">GPA Scale</string>
	<string name="points_aplus">A+</string>
	<string name="points_a">A</string>
	<string name="points_aminus">A-</string>
	<string name="points_bplus">B+</string>
	<string name="points_b">B</string>
	<string name="points_bminus">B-</string>
	<string name="points_cplus">C+</string>
	<string name="points_c">C</string>
	<string name="points_cminus">C-</string>
	<string name="points_dplus">D+</string>
	<string name="points_d">D</string>
	<string name="points_dminus">D-</string>
	<string name="points_f">F</string>
	<string name="toast_points_not_saved">Points not saved. One or more entries were left blank.</string>
    <string name="title_activity_groups">Groups</string>
    <string name="dialog_delete_group_confirm_text">Are you sure that you want to delete this group? Any courses under this group will be hidden. This cannot be undone.</string>
    <string name="title_activity_semesters">Semesters</string>
    <string name="dialog_delete_semester_confirm_text">Are you sure that you want to delete this semester? This cannot be undone.</string>
    <string name="title_activity_semester">Add Semester</string>
    <string name="semester_quick_fill">Quick Fill:</string>
    <string name="semester_spring_20xx"><u>"Spring 20XX"</u></string>
    <string name="semester_summer_20xx"><u>"Summer 20XX"</u></string>
    <string name="semester_fall_20xx"><u>"Fall 20XX"</u></string>
    <string name="semester_winter_20xx"><u>"Winter 20XX"</u></string>
    <string name="semester_color">Color</string>
    <string name="semester_added">Semester added. Add another semester or go back to view your semesters.</string>
    <string name="semester_updated">Semester updated.</string>
    <string name="semester_not_added">Semester name and/or color missing.</string>
    <string name="title_activity_courses">Hidden Courses</string>
    <string name="dialog_delete_course_confirm_text">Are you sure that you want to delete this course? This cannot be undone.</string>
    <string name="title_activity_courses_activity_semester">Semester Courses</string>
    <string name="title_activity_course">Add Course</string>
    <string name="dialog_exclude_from_gpa">Exclude from GPA?</string>
    <string name="dialog_group">Group</string>
    <string name="dialog_semester">Semester</string>
    <string name="dialog_classification">Classification</string>
    <string name="dialog_details">Details</string>
    <string name="dialog_hours">Hours</string>
    <string name="dialog_grade">Grade</string>
    <string name="course_group">Assigned Group</string>
    <string name="course_semester">Assigned Semester</string>
    <string name="course_added">Course added. Add another course or go back to view your degree plan.</string>
    <string name="course_updated">Course updated.</string>
    <string name="course_not_added">Course name missing</string>
    <string name="title_activity_start_help">Getting Started</string>
    <string name="plan_getting_started_header">Welcome to your degree plan.</string>
    <string name="plan_getting_started_note1">Let\'s face it, placing your entire college or university degree plan into an app probably won\'t be the fastest thing you\'ll ever do, but Iuvo\'s simple interface should make it as quick and easy as possible. With a good amount of effort, we should have a beautiful, flexible, and detailed degree plan set up in no time. Iuvo can then give you statistics about your college career and will continue to do so even as you make chagnes later on.</string>
    <string name="plan_getting_started_note1_1"><i>Tip: You should back up your degree plan in the \'more\' tab afterwards so that you don\'t lose all of your hard earned work.</i></string>
    <string name="plan_getting_started_note2">First, start off by adding semesters. These aren\'t needed to construct your degree plan, but Iuvo uses your semesters to help \'color-code\' your your courses, making it easier to recognize when you took them. If you need help while adding or managing your semesters, hit the \'help\' button that displays at the top of the semesters screen.</string>
    <string name="plan_getting_started_note3">Next, we\'ll add groups. Groups are the basic building block of your degree plan in Iuvo and are used to organize your courses the same that way your actual degree plan does. The courses that you create in the next step will appear under these groups. Without groups, none of your courses will be able to appear on your degree plan at all. If still need help with understanding and using groups, hit the \'help\' button that displays at the top of the groups screen. Once you add your first group, this tutorial will disappear and your degree plan will take its place. You can view this tutorial in the \'more\' tab if you need to read it again.</string>
    <string name="plan_getting_started_note4">Finally, we\'ll complete your degree plan in Iuvo by adding every single course from your curriculum. Courses contiain a lot more information than semesters or groups, and are therefore explained in more detail through the \'help\' button in the course screen. You should read this so that you can add all of your courses properly, including transfer credit and credit that is not part of your degree plan. Adding your courses is the final step. Once you\'re done, Iuvo will be able to give you detailed breakdowns about your GPA, grade distribution, and other information in the \'me\' tab.</string>
    <string name="plan_getting_started_note5">Below is a small sample of what your degree plan should look like. It includes a two semesters, two groups, and three courses. Remember, this tutorial will disappear after adding your first group. You can always view it in the \'more\' tab if you need to read it again.</string>
    <string name="about_pronounced"><i>(pronounced \"yoo-voh\", Latin for \"help\")</i></string>
    <string name="about_version">Version</string>
    <string name="about_copyright">© Ruiz Akpan</string>
    <string name="about_web"><u>helloruiz.com</u></string>
    <string name="about_follow">Follow me on Twitter!</string>
    <string name="about_twitter"><u>@helloruiz</u></string>
    <string name="about_feedback">Bug reports and feedback are welcome.</string>
    <string name="about_email"><u>ruiz.akpan@gmail.com</u></string>
    <string name="about_rate_application"><u>Rate application</u></string>
    <string name="about_open_source"><u>Licenses</u></string>
    <string name="backup_title">Better safe than sorry!</string>
    <string name="backup_instructions">Iuvo can save or restore your degree plan by using a backup located on your SD card. Please be sure to have an external (or \"internal\") SD card installed!\n\nThe backup file is named \"IuvoDatabase.db\" and can be found at \"[SD card]/Iuvo\". Iuvo will only save to or restore from this file only.\n\nFor the geeks that are wondering: Yes, this backup is indeed viewable in any SQLite viewer.</string>
    <string name="backup_backup_title">Backup</string>
    <string name="backup_backup_subtitle">Perhaps you\'ll thank yourself later.</string>
    <string name="backup_restore_title">Restore</string>
    <string name="backup_restore_subtitle">Be sure to take a deep breath first!</string>
    <string name="courses_help_title">Manage like a boss.</string>
    <string name="courses_help_overview">You can manage your courses within a group or semester the same way you manage your actual groups and semesters.</string>
    <string name="courses_help_delete">Delete a course by swiping left or right. That course will no longer appear on your degree plan.</string>
    <string name="courses_help_arrange">If you\'re viewing your courses within a group, you can re-arrange your courses by dragging their handles on the right side. Your courses will appear in the same order within its assigned group on your degree plan.\n\n If you\'re viewing your courses within a semester, you cannot re-arrange your courses. Iuvo doesn\'t need the ordering for any practical purpose.</string>
    <string name="courses_help_edit">Edit a course by tapping on it.</string>
</resources>