<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit_profile"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/menu_edit_profile"/>
    
    <item
        android:id="@+id/menu_manage_semesters"
        android:orderInCategory="40"
        android:showAsAction="always"
        android:title="@string/menu_manage_semesters"/>
    
    <item
        android:id="@+id/menu_manage_groups"
        android:orderInCategory="41"
        android:showAsAction="always"
        android:title="@string/menu_manage_groups"/>

    <item
        android:id="@+id/menu_add_course"
        android:orderInCategory="42"
        android:showAsAction="always"
        android:title="@string/menu_add_course"/>
    
</menu>