<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:clipToPadding="false"
	android:scrollbars="none"
    android:background="@color/theme_white"
    tools:context=".AboutActivity" >
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/backup_title_textview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="26sp"
	        android:text="@string/backup_title" />
	    
	    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lvDividerHeight"
        android:background="@color/theme_gray" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="@color/theme_gray"
	        android:textSize="14sp"
	        android:text="@string/backup_instructions" />
	    
	    <LinearLayout
	        android:id="@+id/backup_backup_linearlayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:layout_marginTop="10dp"
		    android:orientation="vertical"
		    android:background="@color/theme_blue"
		    android:clickable="true"
		    android:onClick="backup" >
		
		    <TextView
		        android:id="@+id/backup_backup_title_textview"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
				android:paddingLeft="16dp"
				android:paddingTop="16dp"
		        android:textColor="@color/white"
		        android:textSize="30sp"
		        android:text="@string/backup_backup_title" />
		    
		    <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:paddingLeft="16dp"
		    	android:paddingBottom="16dp"
		    	android:textColor="@color/white"
		    	android:textSize="14sp"
		    	android:text="@string/backup_backup_subtitle" />
		
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/backup_restore_linearlayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:orientation="vertical"
		    android:background="@color/theme_blue"
		    android:clickable="true"
		    android:onClick="restore" >
		
		    <TextView
		        android:id="@+id/backup_restore_title_textview"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
				android:paddingLeft="16dp"
				android:paddingTop="16dp"
		        android:textColor="@color/white"
		        android:textSize="30sp"
		        android:text="@string/backup_restore_title" />
		    
		    <TextView
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:paddingLeft="16dp"
		    	android:paddingBottom="16dp"
		    	android:textColor="@color/white"
		    	android:textSize="14sp"
		    	android:text="@string/backup_restore_subtitle" />
		
		</LinearLayout>
	    
	</LinearLayout> 
</ScrollView>